assets/css/style.css
/* I made this a class because it's on three different pages, but it didn't seem to have any problems as an ID? */
* {
    color: #777777;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}

/*   For some reason this didn't work, only works when I add it on the HTML??
body {
    background-image: url(assets/images/background.png);
}
*/

.nav {
    background-color: white;
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    width: 100%;
    z-index: 1;
    border-bottom: 2px solid #cccccc;
}

.nav a {
    color: #777777;
    float: right;
    display: block;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    border-right: thin solid #cccccc;
}

.navbarname {
    color: white;
    background-color: #4aaaa5;
    font-family: 'Georgia', Times, Times New Roman, serif;
    width: 250px;
    display: inline-block;
    text-align: center;
    position: fixed absolute;
    top: 0;
    z-index: 2;
}

.navcontainer {
    width: 960px;
    margin: auto;
}

.container {
    width: 960px;
    margin: auto;
}

.content {
    margin-top: 100px;
    background-color: #ffffff;
    padding: 20px;
    border: 1px solid #dddddd;
}

h2 {
    font-family: 'Georgia', Times, Times New Roman, serif;
    color: #4aaaa5;
}

/* About Me Page Elements */

#profilepic {
    width: 215px;
    height: 260px;
    float: left;
    padding-right: 25px;
    padding-bottom: 5px;
}

/* Contact Page Elements */
form {
    width: 100%; 
    margin-bottom: 16px; /* Bottom margin */
    margin-right: 50px;
  }

  input[type=submit] {
    background-color: #4aaaa5;
    color: white;
    padding: 12px 20px;
    border: 1px solid #dddddd;
    border-radius: 4px;
    cursor: pointer;
  }

  #text {
      width: 100%;
      border: 1px solid #dddddd;
      padding: 6px;
      margin-top: 4px;
      margin-bottom: 8px;
  }

  #name {
      width: 100%;
      border: 1px solid #dddddd;
      padding: 6px;
      margin-top: 4px;
      margin-bottom: 8px;
  }

  #email {
    width: 100%;
    border: 1px solid #dddddd;
    padding: 6px;
    margin-top: 4px;
    margin-bottom: 8px;
}



/* Portfolio Page Elements */
.image {
    position: relative;
    text-align: center;
    width: 330px;
    float: left;
    display: block;
    padding-right: 30px;
    padding-bottom: 40px;
}

.text {
    position: absolute;
    top: 62%;
    color: white;
    align-items: center;
    background-color: #4aaaa5;
    width: 330px;
    padding-top: 15px;
    padding-bottom: 15px;
    font-family: 'Georgia', Times, Times New Roman, serif;
    font-size: 19px;
}

